# syslog-publisher

./: Cargo.toml
src/: lexer.rs  main.rs  parser.rs
