[package]
name = "syslog-publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = "4.5.39"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
redis = { version = "0.31.0", features = ["tokio-comp", "connection-manager"] }
syslog_loose = "0.21.0"
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0"
